tests/parsing/smtlib/v2.6/errors/075_define-funs-rec_unclosed_1.expected
File "tests/parsing/smtlib/v2.6/errors/075_define-funs-rec_unclosed_1.smt2", line 2, character 41-42:
2 | (define-funs-rec ((foo () bar)) (foobar) _)
                                             ^
Error while parsing a recursive functions definition,
      read the reserved word '_',
      but expected a closing parenthesis.
